2021-03-19 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph-gbz80.def,
	  src/z80/peeph.def:
	  Add new peephole rules for precalc, constants reusage and stack access rearranging.

2021-03-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  src/pdk/main.c,
	  src/pdk/ralloc2.cc:
	  GETBYTE support for pdk.

2021-03-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve register allocation for GETWORD and SWAP iCodes.

2021-03-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use genMove to simplify genSwap.

2021-03-18 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Fix bug #3194.

2021-03-18 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph.def:
	  Fix common peephole rule 41a: do not elimitate ld l,? before ld l,(hl)

2021-03-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph-gbz80.def:
	  Added rules to move inc/dec hl possible upper.

2021-03-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph.def:
	  Add two new peepholes for Z80.

2021-03-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCicode.c:
	  Fix RFE #736.

2021-03-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Add Z80 GETWORD optimization for Z80.

2021-03-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Add Z80 SWAP implementation using RRD.

2021-03-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c,
	  src/z80/main.c:
	  Add GetABit for all Z80 ports.

2021-03-16 Sergey Belyashov <sergey.belyashov@gmail.com>

	* sim/ucsim/z80.src/inst_lr35902.cc:
	  Fix SWAP H/L instructions simulation for GBZ80.

2021-03-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a genMove_o hl issue, part of bug #3194.

2021-03-16 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c,
          src/z80/main.c:
	  Enable multibyte RRC/RLC for GBZ80.
